force-app/main/default/objects/BillingEvent__c/BillingEvent__c.object-meta.xml
<CustomObject>
    <description>A materialized billable item awaiting invoicing. Created from BillingEventRaised__e platform events.</description>
    <label>Billing Event</label>
    <nameField>
        <displayFormat>BE-{0000000000}</displayFormat>
        <label>Billing Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Events</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>