force-app/main/default/objects/BillingEvent__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Engagement this billable item belongs to.</description>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>Billing Events</relationshipLabel>
    <relationshipName>Billing_Events</relationshipName>
    <type>Lookup</type>
</CustomField>