force-app/main/default/objects/BillingEvent__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Invoice this billable item was rolled into, once billed.</description>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Billing Events</relationshipLabel>
    <relationshipName>Billing_Events</relationshipName>
    <type>Lookup</type>
</CustomField>