force-app/main/default/objects/BillingEvent__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Whether this item has been rolled into an invoice.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unbilled</fullName>
                <default>true</default>
                <label>Unbilled</label>
            </value>
            <value>
                <fullName>Billed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>